# fractals

./: Cargo.toml  README.md
src/: buddhabrot.rs  color.rs  complex.rs  main.rs  polynomial.rs
src/fractal/: burning_ship.rs  julia.rs  mandelbrot.rs  mod.rs  newton.rs
src/utils/: color.rs  complex.rs  mod.rs
