[package]
name = "fractals"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[dependencies]
pixel-canvas = "0.2.2"
colors-transform = "0.2.11"
futures = "0.3.25"
itertools = "0.10.5"
conv = "0.3.3"
num-traits = "0.2.15"
packed_simd = "0.3.8"
rayon = "1.7.0"
rand = "0.8.5"
rand_distr = "0.4.3"
