[package]
name = "fractals"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[dependencies]
pixel-canvas = "0.2.2"
# itertools = "0.10.5"
# conv = "0.3.3"
# num-traits = "0.2.15"
colorsys = "0.6.7"
